--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import-normalize;
+
+html {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  position: relative;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+  /* height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden; */
+}
+
+
+
+
+#root {
+  position: relative;
+  width: 100%;
+}
+
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+
+main {
+  position: relative;
+  width: 100%;
 }
