--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -14,25 +14,85 @@ a.navigation-item{
     z-index: 1000;
 }
 
+a.navigation-item svg.nav-svg{
+    display: none;
+}
+
 @media only screen and (min-width: 992px){
     a.navigation-item{
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 25%;
         height: 6rem;
         float: left;
+        padding: 0px;
         transform: rotateX(90deg);
         transform-style: preserve-3d;
         transition: transform 1s;
         border: none;
     }
 
-    a.navigation-item:first-child{
-        background: #ffffff;
+
+    a.navigation-item:first-child,
+    a.navigation-item:first-child span > span{
+        background: rgba(256, 256, 256, 0.9);
+        color: #000000;
+    }
+
+
+    .toolbar.show-menu .navigation-items a.navigation-item{
+        transform: rotateX(0deg);
+    }
+
+    a.navigation-item > span {
+        width: 100%;
+        height: 100%;
+        /* text-align: center; */
+        z-index: 900;
+    }
+
+    a.navigation-item > span > span {
+        display: inline-block;
+        position: relative;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        z-index: 900;
+    }
+
+    a.navigation-item svg.nav-svg {
+        display: block;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        margin: auto auto;
+        text-align: center;
+        /* visibility: hidden; */
+        color: black;
+        transition: width 0.5s, height 0.5s;
+        z-index: 500;
+    }
+
+    a.navigation-item:first-child svg.nav-svg {
+        width: 40px;
+        height: 40px;
+        /* color: #000000; */
+    }
+
+    a.navigation-item span:hover {
+        background: rgba(256, 256, 256, 0.9);
         color: black;
     }
-    .toolbar.show-menu .navigation-items a.navigation-item{
-     
-        transform: rotateX(0deg);
-
+    a.navigation-item span:hover > svg.nav-svg{
+        visibility: visible;
+        width: 40px;
+        height: 40px;
+        color: #000000;
     }
 
 }
