--- a/src/components/Navigation/NavigationItems/NavigationItems.css
+++ b/src/components/Navigation/NavigationItems/NavigationItems.css
@@ -8,6 +8,7 @@
     height: 0px;
     overflow: hidden;
     transition: height 0.5s ease-out;
+    z-index: 1000;
 }
 
 .toolbar.show-menu .navigation-items{
@@ -29,6 +30,7 @@
         top: -3rem;
         height: 9rem;
         padding-top: 3rem;
+
         background: black;
         transform: rotateX(0deg);
 
