--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,12 +1,67 @@
 .home{
+    position: relative;
  width: 100%;
    
 }
 
 
 
+.home::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    height: 190vh;
+    background: url('../../assets/slider_big.jpg') no-repeat center center;
+    transform: translateZ(-1px) scale(1.5);
+    /* Force the background image to fill the whole element. */
+    /* background-size: cover; */
+    background-attachment: fixed;
+    background-position-y: 20%;
+    /* background-attachment: fixed; */
+    /* Keep the image from overlapping sibling elements. */ 
+    z-index: -1;
+}
+
+.home::before{
+    display: block;
+    content: '';
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    left: 10px;
+    height: 100vh;
+    /* bottom: 10px; */
+    border: 1px solid #1c1c1c;
+}
+
+.background-border{
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    bottom: 15px;
+    right: 15px;
+    border: 1px solid #1c1c1c;
+}
+
+
 
 .test{
-    height: 100vh;
+   position: relative;
+   top: calc(100vh - 9rem);
     background: yellow;
+}
+
+.test p {
+    height: 50vh;
+}
+
+@media only screen and (min-width: 992px){
+    .home::after{
+        height: 200vh;
+    }
+    .test{
+        top: 100vh;
+    }
 }
