--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -7,7 +7,7 @@
     width: 100%;
     height: 4rem;
     font-size: 4rem;
-    /* background: #000000; */
+    background: #000000;
     color: white;
     z-index: 1000;
 }
