--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -7,7 +7,7 @@
     /* bottom: 160px; */
     width: 100%;
     /* height: 90px; */
-    padding: 10px 7px;
+    padding: 0.5rem 7px;
     line-height: 4rem;
     font-size: 1.1rem;
     font-weight: bold;
