--- a/src/hoc/Layout/Layout.css
+++ b/src/hoc/Layout/Layout.css
@@ -1,13 +1,15 @@
 .layout {
     position: relative;
     width: 100%;
-    height: 100vh;
-    background: black;
-    overflow-x: hidden;
+    /* height: 100vh; */
+    /* background: black; */
+    /* overflow-x: hidden;
     overflow-y: auto;
-    perspective: 2px;
-    /* background: url('../../assets/slider_sm.jpg') no-repeat;
-    background-size: 100%; */
+    perspective: 2px; */
+
+    /* perspective: 2px; */
+    /* overflow-x: hidden; */
+    overflow: hidden;
 }
 
 
