--- a/src/components/Navigation/Toolbar/DrawerToggle/DrawerToggle.css
+++ b/src/components/Navigation/Toolbar/DrawerToggle/DrawerToggle.css
@@ -17,16 +17,63 @@
 .drawerToggle > div {
     display: block;
     width: 100%;
-    height: 3px;
-    background: #ffffff;
+    height: 2px;
+    background: #ffffff;    
 }
+
 
 @media only screen and (min-width: 992px){
     .desk-only .drawerToggle{
-        top: 0;
-        bottom: 0;
+        top: -1.2rem;
+        bottom: unset;
         right: 40px;
-        height: 5rem;
-        padding: 27px 0px;
+        height: 24px;
+        margin: 48px auto 24px auto;
+        padding: 0px;
     }
+    .drawerToggle > div {
+          position:absolute;
+          left:0;
+          border-radius: 1px;
+          transition: all 0.2s;
+          -webkit-transition: all 0.2s;
+          -moz-transition: all 0.2s;  
+    }
+
+    /* .drawerToggle:hover > div.line-1, .drawerToggle:focus > div.line-1 {
+        transform: translateY(-1);
+        -webkit-transform: translateY(-1);
+        -moz-transform: translateY(-1);
+     }
+.drawerToggle:hover > div.line-3, .drawerToggle:focus > div.line-3 {
+      transform: translateY(1);
+      -webkit-transform: translateY(1);
+      -moz-transform: translateY(1);
+}   */
+
+  .toolbar.show-menu .drawerToggle .line-1 {
+      transform: translateY(12px) translateX(0) rotate(45deg);
+      -webkit-transform: translateY(12px) translateX(0) rotate(45deg);
+      -moz-transform: translateY(12px) translateX(0) rotate(45deg);
+    }
+    .toolbar.show-menu .drawerToggle .line-2 {
+      opacity:0;
+    }
+    .toolbar.show-menu .drawerToggle .line-3 {
+      transform: translateY(-12px) translateX(0) rotate(-45deg);
+      -webkit-transform: translateY(-12px) translateX(0) rotate(-45deg);
+      -moz-transform: translateY(-12px) translateX(0) rotate(-45deg);
+    }
+
+
+
+.drawerToggle > div.line-1 {
+  top:0;
+}
+.drawerToggle > div.line-2 {
+  top:50%;
+}
+.drawerToggle > div.line-3 {
+  top:100%;
+}
 }
