--- a/src/hoc/Layout/Layout.css
+++ b/src/hoc/Layout/Layout.css
@@ -1,19 +1,11 @@
 .layout {
     position: relative;
     width: 100%;
-    /* height: 100vh; */
-    /* background: black; */
-    /* overflow-x: hidden;
-    overflow-y: auto;
-    perspective: 2px; */
-
-    /* perspective: 2px; */
-    /* overflow-x: hidden; */
     overflow: hidden;
 }
 
 
-
+/* 
 
 .background {
     position: relative;
@@ -29,10 +21,7 @@
     bottom: 0;
     background: url('../../assets/slider_sm.jpg') no-repeat center center;
     transform: translateZ(-1px) scale(1.5);
-    /* Force the background image to fill the whole element. */
     background-size: cover;
-    /* background-attachment: fixed; */
-    /* Keep the image from overlapping sibling elements. */ 
     z-index: -1;
 }
 
@@ -53,19 +42,12 @@
     bottom: 15px;
     right: 15px;
     border: 1px solid #1c1c1c;
-}
+} */
 
 
 @media only screen and (min-width: 992px){
     .layout{
     
     }
-    .layout .logo{
-        display: none;
-    }
-    .background::after{
-        background: url('../../assets/slider_big.jpg');
-        background-size: cover;
-    }
-
+   
 }
