--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -39,6 +39,10 @@ a.navigation-item svg.nav-svg{
         background: rgba(256, 256, 256, 0.9);
         color: #000000;
     }
+    a.navigation-item:first-child span > span > span {
+        background: transparent;
+        
+    }
 
 
     .toolbar.show-menu .navigation-items a.navigation-item{
@@ -61,6 +65,10 @@ a.navigation-item svg.nav-svg{
         z-index: 900;
     }
 
+    a.navigation-item > span > span > span {
+        position: relative;
+    }
+
     a.navigation-item svg.nav-svg {
         display: block;
         position: absolute;
@@ -74,7 +82,7 @@ a.navigation-item svg.nav-svg{
         text-align: center;
         /* visibility: hidden; */
         color: black;
-        transition: width 0.5s, height 0.5s;
+        transition: width 0.3s, height 0.3s;
         z-index: 500;
     }
 
@@ -95,4 +103,41 @@ a.navigation-item svg.nav-svg{
         color: #000000;
     }
 
+    a.navigation-item > span:hover > span > span {
+        background: transparent;
+
+    }
+
+    a.navigation-item > span > span > span::before, 
+    a.navigation-item > span > span > span::after {
+        content: "[";
+        display: inline-block;
+        position: relative;
+        top: -1px;
+        bottom: 0;
+        left: 0px;
+        height: 1.1rem;
+        color: transparent;
+        transition: left 0.2s;
+    }
+    a.navigation-item > span > span > span::after{
+        content: ']';
+    }
+    a.navigation-item > span:hover > span > span::before {
+        left: -10px;
+       color: darkgreen;
+    }
+    a.navigation-item > span:hover > span > span::after {
+        left: 10px;
+       color: darkgreen;
+    }
+
+    a.navigation-item:first-child > span > span > span::before{
+        color: darkgreen;
+        left: -10px;
+    }
+    a.navigation-item:first-child > span > span > span::after{
+        color: darkgreen;
+        left: 10px;
+    }
 }
