--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -10,7 +10,7 @@
     padding: 0.5rem 7px;
     line-height: 4rem;
     font-size: 1.1rem;
-    font-weight: bold;
+    font-weight: 500;
     text-align: left;
     background-color: #000000;
     perspective: 1000px;
