--- a/src/index.css
+++ b/src/index.css
@@ -15,9 +15,7 @@ body {
   margin: 0px;
   padding: 0px;
   width: 100%;
-  /* height: 100%;
-  overflow-y: scroll;
-  overflow-x: hidden; */
+  font-family: 'Oswald', sans-serif;
 }
 
 
