--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
   margin: 0px;
   padding: 0px;
   width: 100%;
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Open Sans Condensed', sans-serif;
 }
 
 
