--- a/src/components/Home/Portfolio/Portfolio.css
+++ b/src/components/Home/Portfolio/Portfolio.css
@@ -27,7 +27,7 @@
 .portfolio-buttons-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     max-width: 530px;
     margin: 0px auto;
