--- a/src/components/UI/Button/Button.css
+++ b/src/components/UI/Button/Button.css
@@ -1,4 +1,5 @@
 .btn {
+    display: inline-block;
     position: relative;
     margin-bottom: 10px;
     margin-right: 10px;
@@ -17,10 +18,36 @@
 }
 
 .btn span {
-    position: relative;
     background: transparent;
     color: inherit;
+    overflow: hidden;
     z-index: 2;
+}
+
+.btn span::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #000000;
+    z-index: 2;
+    transition: left 0.2s linear 0.2s, width 0.2s linear 0.2s;
+}
+
+.btn:first-child span::after{
+    transition:  left 0.2s linear 0s, width 0.2s linear 0s;
+}
+.btn:last-child span::after{
+    transition: left 0.2s linear 0.4s, width 0.2s linear 0.4s;
+}
+
+.portfolio-buttons-container.show-btns .btn span::after{
+    width: 0px;
+    left: 100%;
 }
 
 .btn::before,
@@ -56,12 +83,5 @@
 .btn:hover::after,
 .btn:hover::before{
     width: 50%;
-}
-
-@keyframes btnBackground{
-    0% {width: 0px;}
-    90% {width: 40%;}
-    95% {width: 30%}
-    100% {width: 50%}
 }
 
