--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,11 +1,28 @@
 .about {
     width: 100%;
+    padding: 0 35px 0 30px;
 }
 
-.about > .about-img {
+.about-header-container{
+    width: 100%;
+    /* height: 8rem; */
+
+}
+
+.about-img-container {
+    width: 100%;
+    height: 250px;
+    margin: 0px 0 45px 0;
+}
+
+.about-text-container{
+    width: 100%;
+}
+
+.about > .about-img-container > .about-img {
     display: block;
     width: 250px;
     max-width: 100%;
-    height: auto;
+    height: 100%;
     margin: 0px auto;
 }
