--- a/src/components/UI/HeaderContainer/HeaderContainer.css
+++ b/src/components/UI/HeaderContainer/HeaderContainer.css
@@ -1,37 +1,37 @@
 
-.text-container{
+.header-container{
     position: relative;
     width: 100%;
-    height: 8rem;
-    color: white;
+    /* height: 8rem; */
+    color: inherit;
 
 }
 
-.text-container > .text-wrapp {
+.header-container > .text-wrapp {
     position: relative;
     top: 0;
     left: 0;
     right: 0;
     width: 100%;
-    height: 8rem;
+    /* height: 8rem; */
     opacity: 0;
     overflow: hidden;
 }
 
-.text-container.show-text > .text-wrapp {
+.header-container.show-text > .text-wrapp {
     animation: flipInX 1s forwards 0.3s;
 }
 
-.text-container h1 {
-    height: 5rem;
+.header-container h1 {
+    /* height: 5rem; */
     margin: 0;
     line-height: 5rem;
     font-size: 4rem;
     font-weight: 500;
 }
 
-.text-container p {
-    height: 2rem;
+.header-container p {
+    /* height: 2rem; */
     margin: 0;
     text-align: center;
     line-height: 2rem;
@@ -43,19 +43,24 @@
 .text-divider {
     position: relative;
     width: 80%;
-    height: 1px;
+    /* height: 1px; */
     margin: 0 auto;
     max-width: 300px;
-    box-shadow: 0 0 3px white;
+    transform: rotate(180deg);
+    /* box-shadow: 0 0 3px white; */
+}
+
+.text-divider > svg {
+    transform: rotateX(-70deg);
 }
 
 
 
 @media only screen and (min-width: 992px){
-    .text-container h1 {
+    .header-container h1 {
         font-size: 4rem;
     }
-    .text-container p {
+    .header-container p {
         font-size: 1.2rem;
     }
 }
