--- a/src/components/UI/ParagraphContainer/ParagraphContainer.css
+++ b/src/components/UI/ParagraphContainer/ParagraphContainer.css
@@ -1,15 +1,23 @@
 .paragraph-container{
+    position: relative;
     width: 100%;
     padding: 0 5px;
 }
 
 
 .paragraph-container h3{
+    position: relative;
+    left: -100%;
     margin: 0px;
     margin-bottom: 5px;
     font-size: 2.5rem;
     font-weight: 500;
     text-align: left;
+    transition: left 0.7s;
+}
+
+.paragraph-container.show h3{
+    left: 0;
 }
 
 .paragraph-container p{
