--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,4 +1,9 @@
 .about {
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     padding: 0 35px 0 30px;
 }
@@ -25,4 +30,13 @@
     max-width: 100%;
     height: 100%;
     margin: 0px auto;
+}
+
+
+@media only screen and (min-width: 768px){
+    .about-img-container, 
+    .about-text-container{
+        width: 50%;
+        margin-top: 20px;
+    }
 }
