--- a/src/components/Home/FancyGallery/FancyGallery.css
+++ b/src/components/Home/FancyGallery/FancyGallery.css
@@ -29,7 +29,7 @@
 .fancyGallery-gallery{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
    width: 100%;
 }
