--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -5,23 +5,26 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    padding: 0 35px 0 30px;
+    /* padding: 0 35px 0 30px; */
 }
 
 .about-header-container{
     width: 100%;
-    /* height: 8rem; */
 
 }
 
 .about-img-container {
+    position: relative;
     width: 100%;
     height: 250px;
     margin: 0px 0 45px 0;
+    background: #000000;
+    z-index: 2;
 }
 
 .about-text-container{
     width: 100%;
+    padding-right: 35px;
 }
 
 .about > .about-img-container > .about-img {
