--- a/src/components/UI/ParagraphContainer/ParagraphContainer.css
+++ b/src/components/UI/ParagraphContainer/ParagraphContainer.css
@@ -7,13 +7,17 @@
 
 .paragraph-container h3{
     position: relative;
-    left: -100vw;
+    /* left: -100vw; */
     margin: 0px;
     margin-bottom: 5px;
     font-size: 2.5rem;
     font-weight: 500;
     text-align: left;
     transition: left 0.7s;
+}
+
+.inViewListener .paragraph-container h3{
+    left: -100vw;
 }
 
 .inViewListener.show-component .paragraph-container h3{
