--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,37 +5,16 @@
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    min-height: 80px;
-    padding: 20px 20px 0px 20px;
-    margin-top: 30px;
+    min-height: 200px;
+    padding: 70px 20px 20px 20px;
+    background: rgba(255, 255, 255, 0.1);
 }
 
-.footer > div.line{
-    display: flex;
-    position: absolute;
-    top: 0;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 1.5rem;
-    line-height: 1.5rem;
-    font-size: 1.5rem;
-    color: black;
-    text-shadow: 0 0 1px white;
-}
 
-.footer > div.line > span {
-    width: 30%;
-    border: 1px double white;
-    display: inline-block;
-    height: 3px;
-    border-left: none;
-    border-right: none;
-    border-radius: 50%;
-}
 
 
 .footer > a{
+    padding: 0 10px;
     color: #cccccc;
     text-decoration: none;
     cursor: pointer;
