--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,38 +1,37 @@
 .about {
     position: relative;
+    z-index: 3;
     display: inline-flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     width: 100%;
-    margin-bottom: 50px;
-    z-index: 3;
+    /* margin-bottom: 50px; */
+    padding-bottom: 60px;
+    background: black;
     /* padding: 0 35px 0 30px; */
 }
 
 .about-header-container{
     position: relative;
     width: 100%;
-    background: black;
+    /* background: black; */
     z-index: 3;
 }
 
-.about-img-container {
-    position: relative;
-    width: 100%;
-    height: 250px;
-    margin: 0px 0 45px 0;
-    background: #000000;
-    z-index: 2;
-}
 
 .about-text-container{
     width: 100%;
     padding-right: 35px;
 }
 
-.about > .about-img-container > .about-img {
+.about > .about-img-container > div.about-img-wrapp{
+    display: inline-block;
+    position: relative;
+}
+
+.about > .about-img-container > div.about-img-wrapp > img.about-img {
     display: block;
     width: 250px;
     max-width: 100%;
@@ -42,6 +41,17 @@
 
 
 @media only screen and (min-width: 768px){
+    .about{
+        bottom: 0;
+        align-items: flex-start;
+        /* overflow: hidden; */
+        min-height: calc(100vh - 58px);
+    }
+    .about-img-container{
+        position: relative;
+        z-index: 3;
+        background: black;
+    }
     .about-img-container, 
     .about-text-container{
         width: 50%;
