--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -7,15 +7,20 @@
     width: 100%;
     min-height: 200px;
     padding: 70px 20px 20px 20px;
-    background: rgba(255, 255, 255, 0.1);
+    background: #262626;
 }
-
-
-
 
 .footer > a{
     padding: 0 10px;
     color: #cccccc;
     text-decoration: none;
     cursor: pointer;
+}
+
+@media only screen and (min-width: 768px){
+    .footer{
+        height: 58px;
+        min-height: unset;
+        padding: 20px;
+    }
 }
