--- a/src/components/UI/Button/Button.css
+++ b/src/components/UI/Button/Button.css
@@ -1,22 +1,25 @@
 .btn {
     display: inline-block;
     position: relative;
-    margin-bottom: 10px;
-    margin-right: 10px;
+    margin-bottom: 10px; 
+     margin-right: 10px;
     padding: 10px;
+/*    
+    outline: none;
+    border: none; */
+    background: #660033;
     font-size: 1rem;
 	letter-spacing: 0.1rem;
-    outline: none;
-    border: none;
-    background: #660033;
     color: white;
     overflow: hidden;
     transition: color 0.5s;
     z-index: 3;
 }
+
+/* 
 .btn:last-child{
     margin-right: 0px;
-}
+} */
 
 .btn > span {
     background: transparent;
@@ -46,15 +49,16 @@
     transition: left 0.2s linear 0.2s, width 0.2s linear 0.2s;
 }
 
-.btn:first-child span::after{
+.fancyGallery-buttons-container .btn:first-child span::after{
     transition:  left 0.2s linear 0s, width 0.2s linear 0s;
 }
-.btn:last-child span::after{
+.fancyGallery-buttons-container .btn:last-child span::after{
     transition: left 0.2s linear 0.4s, width 0.2s linear 0.4s;
 }
 
 div.inViewListener.show-component .fancyGallery-buttons-container .btn span::after,
-.home-carousel .btn span::after{
+.home-carousel .btn span::after,
+.contacts div.inViewListener.show-component .btn span::after{
     width: 0px;
     left: 100%;
 }
@@ -84,13 +88,16 @@ div.inViewListener.show-component .fancyGallery-buttons-container .btn span::aft
 .btn:hover{
     color: #391326;
 }
-.btn.active{
-    background: #ffffff;
-    color: #391326;
+.btn.active::after{
+    /* background: black; */
+    /* color: #391326; */
 }
 
 .btn:hover::after,
-.btn:hover::before{
+.btn:hover::before
+/* .btn.active::after,
+.btn.btn.active::before */
+{
     width: 50%;
 }
 
