--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -3,12 +3,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
     width: 100%;
     height: 4rem;
-    font-size: 4rem;
+    padding-top: 0.5rem;
+    line-height: 4rem;
+    font-family: 'Monsieur La Doulaise', cursive;
+    font-size: 2rem;
+    font-weight: 400;
     background: #000000;
-    color: white;
+    text-align: center;
+    color: gray;
+    /* text-shadow: -1px 1px 1px #660033, 1px 1px 1px #660033, 1px -1px 1px #660033, -1px -1px 1px #660033; */
     z-index: 1000;
 }
 
@@ -22,8 +27,10 @@
         bottom: 0px;
         width: 50%;
         padding-left: 30px;
+        padding-top: 0px;
         height: 5rem;
         line-height: 5rem;
+        
         text-align: left;
         background: unset;
     }
