--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -11,6 +11,7 @@
     font-weight: 700;
     text-align: left;
     background-color: #000000;
+    box-shadow: 0px 2px 6px black, -2px 2px 6px black, 2px 2px 6px black;
     perspective: 1000px;
     z-index: 1000;
     transition: top 0.5s;
@@ -47,6 +48,7 @@
         height: 11rem;
         line-height: 6rem;
         background: none;
+        box-shadow: none;
     }
     .toolbar.show-menu {
         position: fixed;
