--- a/src/components/Home/FancyGallery/FancyGallery.css
+++ b/src/components/Home/FancyGallery/FancyGallery.css
@@ -1,5 +1,6 @@
 .fancyGallery{
     padding: 20px 10px;
+    /* padding: 20px 0; */
 }
 
 
@@ -9,6 +10,12 @@
 .fancyGallery-gallery{
     width: 100%;
 }
+/* 
+.fancyGallery div.inViewListener{
+    position: relative;
+    z-index: 2;
+    background: #000000;
+} */
 
 
 
@@ -22,17 +29,37 @@
     max-width: 530px;
     margin: 0px auto;
     padding: 0px 20px 20px 20px;
+    /* z-index: 2; */
 }
 
 
 
 .fancyGallery-gallery{
+    position: relative;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
    width: 100%;
+   
 }
+.fancyGallery-gallery::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: url('../../../assets/images/18699703_264620794006794_5410145634690834259_o.jpg') no-repeat center center;
+   background-attachment: fixed;
+   z-index: 1;
+   /* transform: translateZ(-1px) scale(1.5); */
+}
+
+
 .fancyGallery-gallery > div {
+    position: relative;
     margin: 20px;
+    z-index: 2;
 }
