--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 100%;
     color: white;
-    background: rgba(0,0,0,0.7);
+    /* background: rgba(0,0,0,0.7); */
 }
 
 
@@ -11,14 +11,17 @@
 .home::after{
     content: '';
     position: absolute;
+
     top: 0;
     right: 0;
     left: 0;
-    height: 190vh;
-    background: url('../../assets/horse_sm.jpg') no-repeat center center;
+    height: 150vh;
+    background: url('../../assets/images/21752617_313159862486220_2846810308660514837_o.jpg') no-repeat center center;
     /* background: url('../../assets/horse_sm.jpg') no-repeat center center; */
     transform: translateZ(-1px) scale(1.5);
     background-attachment: fixed;
+    /* background-position-x: 20%; */
+    /* background-position-y: 20%; */
     /* background-position-y: 20%; */
     /* filter: grayscale(100%); */
     z-index: -1;
