--- a/src/components/UI/HeaderContainer/HeaderContainer.css
+++ b/src/components/UI/HeaderContainer/HeaderContainer.css
@@ -35,6 +35,7 @@ div.inViewListener.show-component .header-container > .text-wrapp {
     line-height: 5rem;
     font-size: 4rem;
     font-weight: 500;
+    letter-spacing: 0.7rem;
 }
 
 .header-container p {
@@ -61,7 +62,11 @@ div.inViewListener.show-component .header-container > .text-wrapp {
     transform: rotateX(-70deg);
 }
 
-
+@media only screen and (min-width: 756px){
+    .header-container h1 {
+        letter-spacing: 1rem;
+    }
+}
 
 @media only screen and (min-width: 992px){
     .header-container h1 {
