--- a/src/components/UI/HeaderContainer/HeaderContainer.css
+++ b/src/components/UI/HeaderContainer/HeaderContainer.css
@@ -1,10 +1,15 @@
 
 .header-container{
     position: relative;
+    margin: 42px 0;
     width: 100%;
     /* height: 8rem; */
     color: inherit;
 
+}
+
+.home-carousels .header-container{
+    margin-bottom: 62px;
 }
 
 .header-container > .text-wrapp {
@@ -46,6 +51,11 @@ div.inViewListener.show-component .header-container > .text-wrapp {
     font-size: 1rem;
     font-weight: 300;
     font-style: italic;
+}
+
+.header-container p{
+    box-shadow: 0 2px 3px gray;
+    padding-bottom: 20px;
 }
 
 .text-divider {
