--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -8,7 +8,7 @@
     justify-content: center;
     width: 100%;
     /* margin-bottom: 50px; */
-    padding-bottom: 60px;
+    padding:0 20px 60px 20px;
     background: black;
     /* padding: 0 35px 0 30px; */
 }
