--- a/src/components/UI/HeaderContainer/HeaderContainer.css
+++ b/src/components/UI/HeaderContainer/HeaderContainer.css
@@ -1,11 +1,12 @@
 
 .header-container{
     position: relative;
-    margin: 42px 0;
+    margin: 0;
+    padding: 42px 0 10px 0;
     width: 100%;
     /* height: 8rem; */
     color: inherit;
-
+    /* font-family: monospace; */
 }
 
 .home-carousels .header-container{
@@ -23,10 +24,10 @@
     overflow: hidden;
 }
 
-.home-carousels .header-container > .text-wrapp,
+/* .home-carousels .header-container > .text-wrapp,
 .about .header-container > .text-wrapp{
     padding: 30px 0;
-}
+} */
 
 
 
@@ -37,10 +38,12 @@ div.inViewListener.show-component .header-container > .text-wrapp {
 .header-container h1 {
     /* height: 5rem; */
     margin: 0;
+    /* margin-bottom: 10px; */
     line-height: 5rem;
+    font-family: monospace;
     font-size: 4rem;
     font-weight: 500;
-    letter-spacing: 0.7rem;
+    letter-spacing: 0.5rem;
 }
 
 .header-container p {
@@ -53,9 +56,42 @@ div.inViewListener.show-component .header-container > .text-wrapp {
     font-style: italic;
 }
 
-.header-container p{
-    box-shadow: 0 2px 3px gray;
-    padding-bottom: 20px;
+.header-container::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    /* width: 100%; */
+    width: 0px;
+    height: 2px;
+    background: linear-gradient(to left, black,#b3b3b3, black, black,#b3b3b3,black);
+    transition: width 0.4s;
+}
+.header-container::before{
+    content: '\2727';
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 50%;
+    top: calc(100% - 0.5em);
+    z-index: 900;
+    width: 1em;
+    height: 1em;
+    font-size: 1em;
+    line-height: 1em;
+    font-family: monospace;
+    color: #b3b3b3;
+    opacity: 0;
+    transform: translateX(-50%);
+    transition: opacity 0.7s ease-in-out;
+}
+
+div.inViewListener.show-component .header-container::after{
+    width: 100%;
+}
+div.inViewListener.show-component .header-container::before{
+    opacity: 1;
 }
 
 .text-divider {
