--- a/src/components/UI/ParagraphContainer/ParagraphContainer.css
+++ b/src/components/UI/ParagraphContainer/ParagraphContainer.css
@@ -49,15 +49,30 @@ div.home-carousel > div.home-carousel-text-wrapp > div.paragraph-container > p {
 }
 
 
+
+
 @media only screen and (min-width: 768px){
+    div.home-carousel > div.home-carousel-text-wrapp > div.paragraph-container > p {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+    }
     div.about div.paragraph-container h3 {
         left: -100%;
     }
     div.about .inViewListener.show-component .paragraph-container h3{
         /* left: -100%; */
-        transition: left 1s ease-in-out;
+        transition: left 0.5s ease-in-out;
     }
     div.home-carousel > div.home-carousel-text-wrapp > div.paragraph-container{
         padding: 0 30px;
+    }
+}
+
+@media only screen and (min-width: 992px){
+    div.home-carousel > div.home-carousel-text-wrapp > div.paragraph-container > p {
+        -webkit-line-clamp: 3;
     }
 }
