--- a/src/components/Shop/Controls/Controls.css
+++ b/src/components/Shop/Controls/Controls.css
@@ -1,110 +1,16 @@
-div.shop-controls-container{
-    width: 100%;
-  
-}
-
-div.shop-controls-container div.select-container{
-    width: 100%;
-    padding: 0 20px;
-}
-
-div.shop-controls-container div.select-container div.select-label{
-    width: 100%;
-    font-size: 1.3rem;
-}
-
-div.shop-controls-container div.select-container div.select-options-wrapp{
-    position: relative;
-    width: 100%;
-}
-
-div.shop-controls-container div.select-container div.select-options-wrapp div.select-value-container{
-    /* display: flex;
-    justify-content: space-between;
-    align-items: center; */
-    width: 100%;
-}
-
-div.shop-controls-container div.select-container div.select-options-wrapp div.select-value-container span,
-div.shop-controls-container div.select-container div.select-options-wrapp div.select-options-container div.option span{
-    display: inline-block;
-    width: 90%;
-    height: 100%;
-    padding-left: 10px;
-    background: gray;
-}
-
-div.select-svg-container{
+div.shop > div.shop-controls{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 10%;
-    height: 100%;
-    margin-left: 1px;
-    background-color: gray;
-}
-
-div.shop-controls-container div.select-container div.select-options-wrapp div.select-options-container{
-    position: absolute;
+    padding: 10px 0px;
     width: 100%;
 }
 
-div.shop-controls-container div.select-container.show div.select-options-wrapp div.select-options-container{
-
-    z-index: 901;
+@media only screen and (min-width: 600px){
+    div.shop > div.shop-controls{
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
 }
-
-div.shop-controls-container div.select-container div.select-options-wrapp div.select-options-container div.option{
-    /* background: white; */
-    justify-content: flex-start;
-    color: darkgray;
-    background: white;
-    opacity: 0;
-    transition: all 0.5s;
-}
-
-div.shop-controls-container div.select-container.show div.select-options-wrapp div.select-options-container div.option{
-    opacity: 1;
-}
-
-
-div.shop-controls-container div.select-container div.select-options-wrapp div.select-options-container div.option:nth-child(1),
-div.shop-controls-container div.select-container div.select-options-wrapp div.select-options-container div.option:nth-child(3){
-    position: relative;
-    left: 10px;
-}
-
-div.shop-controls-container div.select-container div.select-options-wrapp div.select-options-container div.option:nth-child(2){
-    position: relative;
-    left: -10px;
-}
-
-div.shop-controls-container div.select-container.show div.select-options-wrapp div.select-options-container div.option:nth-child(1),
-div.shop-controls-container div.select-container.show div.select-options-wrapp div.select-options-container div.option:nth-child(2),
-div.shop-controls-container div.select-container.show div.select-options-wrapp div.select-options-container div.option:nth-child(3){
-    left: 0;
-}
-
-
-div.shop-controls-container div.select-container div.select-options-wrapp div.select-options-container div.option div.select-svg-container{
-    margin: 0px;
-    background: white;
-}
-
-div.shop-controls-container div.select-container div.select-options-wrapp div.select-options-container div.option span{
-    background: white;
-}
-
-
-div.shop-controls-container div.control-box{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 2.5rem;
-    margin-top: 4px;
-    line-height: 2.5rem;
-    text-align: left;
-}
-
-
