fix images hover

--- a/src/components/Home/FancyGallery/FancyGallery.css
+++ b/src/components/Home/FancyGallery/FancyGallery.css
@@ -78,8 +78,8 @@ div.inViewListener.show-component .fancyGallery-buttons-container::after{
 } */
 
 
-.fancyGallery-gallery > div {
+/* .fancyGallery-gallery > div {
     position: relative;
     margin: 20px;
     z-index: 2;
-}
+} */
