--- a/src/components/Home/FancyGallery/Images/Images.css
+++ b/src/components/Home/FancyGallery/Images/Images.css
@@ -36,7 +36,7 @@ div.fg-item-container:hover img{
     transform: scale(1.1);
     transition: transform 0.3s ease-in-out; */
     /* border: 1px solid darkgreen; */
-    box-shadow: 0 0 4px inset #1d8c39;
+    box-shadow: 0 0 4px inset white;
     /* background: linear-gradient(45deg, black, #0c1c10, #0c1c10, black); */
 
     transform: translateZ(20px);
