--- a/src/container/Shop/Shop.css
+++ b/src/container/Shop/Shop.css
@@ -10,6 +10,7 @@ div.shop{
 div.shop-gallery{
     position: relative;
     margin-top: 50px;
+    padding: 0 15px;
     width: 100%;
     min-height: 100vh;
 }
