--- a/src/components/UI/ImgLoader/ImgLoader.css
+++ b/src/components/UI/ImgLoader/ImgLoader.css
@@ -27,11 +27,10 @@ div.img-loader-container::after{
     left: 30px;
     width: calc(100% - 60px);
     height: calc(100% - 60px);
-    border: 1px solid grey;
+    border: 1px solid darkgrey;
     /* opacity: 1; */
     /* transition: opacity 0.2s; */
-    overflow: visible;
-    transition: all 0.3s;
+    transition: all 0.3s ease-in-out;
 }
 
 div.img-loader-container:hover::after{
@@ -40,6 +39,7 @@ div.img-loader-container:hover::after{
     left: -10px;
     width: calc(100% + 20px);
     height: calc(100% + 15px);
+    /* border: 1px solid darkgrey; */
 }
 
 div.img-loader-container.loaded > img.img{
